--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="mediaquery.css">
     <link rel="stylesheet" href="utilities.css">
     <title> Lick and sweet(Gallery) </title>
+    <link rel="icon" type="image/png" href="images/logo.jpg">
+
 </head>
 <body>
     
