--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="mediaquery.css">
     <link rel="stylesheet" href="utilities.css">
     <title>Contact Page</title>
+    <link rel="icon" type="image/png" href="images/logo.jpg">
+
 </head>
 <body>
     <div class="wrapper">
