--- a/school.html
+++ b/school.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="mediaquery.css">
     <link rel="stylesheet" href="utilities.css">
     <title> Lick and sweet(School) </title>
+    <link rel="icon" type="image/png" href="images/logo.jpg">
+
 </head>
 <body>
    
