--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h3> Lick 'n' Sweet
                         <span class="text" data-wait="500" data-words='["Catering School", "Is One Of The Top Catering Schools In Lagos"]'></span>
                     </h3>
-                    <p>Lick & Sweet Catering School is located beside Conoil filling station,No. 1 Adesina, Ijegun Rd, Isheri Osun, Lagos</p>
+                    <p>Lick & Sweet Catering School is located beside Conoil bustop,No. 1 Adesina, Ijegun Rd, Isheri Osun, Lagos</p>
                     <p> Admission is on a daily basis !!!</p>
                     <p> Affordable School fees with intensive training</p>
                     <p> Sure Institute <span> 👍 </span> </p>
